sandc/test/fixtures/astRegression/shouldSucceed/productions/mtrPseudex/RepeatingArrayFillPseudex.sand
pub class RepeatingArrayFill {
    foo() {
        let a = ["foo"; n];
    }
}