sandc/test/fixtures/astRegression/shouldFail/productions/blockPseudex/BlockStatementInPlaceOfBlockPseudex.sand
pub class BlockStatementInPlaceOfBlockPseudex {
    foo() {
        let a = {

        };
    }
}